tests/agl/rejections/scope/return_in_param_default.agl
def f(x: int = (return 1)) -> int = x
f()
